--- a/cloud-school-bw/package.json
+++ b/cloud-school-bw/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^6.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
